# shuati-demo

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: main.py
app/config/: __init__.py
app/question_lib/: __init__.py  model.py
app/routers/: __init__.py  model.py  test_model.py
app/user/: __init__.py  model.py  user.py
app/utils/: log.py  timetools.py  tools.py
data/question_libs/: example_question_lib.json
docs/: question_lib.md  readme.md  user.md
