[tool.poetry]
name = "shuati-demo"
version = "0.1.0"
description = ""
authors = ["Well404 <well_404@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shuati_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.44"
python-multipart = "^0.0.5"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
