[tool.poetry]
name = "shuati-demo"
version = "0.1.0"
description = ""
authors = ["Well404 <well_404@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shuati_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.44"
python-multipart = "^0.0.5"
aiosqlite = "^0.17.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[tool.black]
line-length = 79
target-version = ["py310", "py311"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
